WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287640
Fix some WebKitLegacy fullscreen tests after
290289@main
https://bugs.webkit.org/show_bug.cgi?id=287640
Summary
Fix some WebKitLegacy fullscreen tests after 290289@main
Alex Christensen
Reported
2025-02-13 10:06:37 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-13 10:06:49 PST
<
rdar://problem/144795386
>
Alex Christensen
Comment 2
2025-02-13 10:08:45 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40563
EWS
Comment 3
2025-02-13 10:48:32 PST
Committed
290350@main
(463965453064): <
https://commits.webkit.org/290350@main
> Reviewed commits have been landed. Closing PR #40563 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug