Fix some WebKitLegacy fullscreen tests after 290289@main https://bugs.webkit.org/show_bug.cgi?id=287640 rdar://144795386

Unreviewed.

Some fullscreen promises weren't being resolved at the right time in WebKitLegacy
because I wasn't passing the completion handler all the way from
WebChromeClient::enterFullScreenForElement to FullscreenManager::willEnterFullscreen.

* Source/WebCore/dom/FullscreenManager.h:
* Source/WebKitLegacy/mac/WebCoreSupport/WebChromeClient.mm:
(WebChromeClient::enterFullScreenForElement):
(WebChromeClient::exitFullScreenForElement):
* Source/WebKitLegacy/mac/WebCoreSupport/WebKitFullScreenListener.h:
* Source/WebKitLegacy/mac/WebCoreSupport/WebKitFullScreenListener.mm:
(-[WebKitFullScreenListener webkitWillEnterFullScreen]):
* Source/WebKitLegacy/mac/WebView/WebFullScreenController.h:
* Source/WebKitLegacy/mac/WebView/WebFullScreenController.mm:
(-[WebFullScreenController enterFullScreen:completionHandler:]):
(-[WebFullScreenController enterFullScreen:]): Deleted.
* Source/WebKitLegacy/mac/WebView/WebView.mm:
(-[WebView _didStartProvisionalLoadForFrame:]):
(-[WebView _enterFullScreenForElement:completionHandler:]):
(-[WebView _enterFullScreenForElement:]): Deleted.
* Source/WebKitLegacy/mac/WebView/WebViewInternal.h:

Canonical link: https://commits.webkit.org/290350@main